2013-08-26  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: Add missing includes.  This allows compiling fuse with
	musl.  Patch by Daniel Thau

2013-07-26  Miklos Szeredi <miklos@szeredi.hu>

	* Print help on stdout instead of stderr

2013-07-25  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fuse -> fuse3.  Allow 2.X and 3.X to coexist.  Includes
	are now stored under /usr/include/fuse3 and library is named
	libfuse3.*.  Invoke pkg-config with "fuse3" as the first argument
	to build with version 3 of the library.

	* ulockmgr: strip ulockmgr support from this source package and
	distribute it separately.  It is not needed for the building of
	libfuse, only fusexmp_fh.  Check ulockmgr library in ./configure
	and if not disable remote-lock suport in fusexmp_fh.

2013-07-24  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: remove "-D_FILE_OFFSET_BITS=64" from fuse.pc, add
	AC_SYS_LARGEFILE to your configure.ac instead.

2013-06-21  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: set FD_CLOEXEC also when receiving device fd from
	fusermount

2013-06-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix multiple close of device fd.  Reported by Dan
	Greenfield

2013-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix thread cancel race.  Exiting a worker my race with
	cancelling that same worker.  This caused a segmenation
	fault. Reported and tested by Anatol Pomozov

2013-02-20  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: change the type of fuse_ino_t from 'unsigned long' to
	'uint64_t'

	* libfuse: use O_CLOEXEC flag when opening /dev/fuse device.
	Patch by Richard W.M. Jones

	* libfuse: don't force -D_FILE_OFFSET_BITS=64 in pkgconfig file.
	Patch by Richard W.M. Jones

2013-02-19  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_daemonize(): chdir to "/" even if not running in the
	background for consistency.  Reported by Vladimir Rutsky

2013-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* fuse_opt_parse(): when storing a newly allocated string for